bug: application d'un z-index aux autocomplete pour eviter qu'ils soient cachés
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@4461 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/mediboard/main.css
+++ b/style/mediboard/main.css
@@ -927,6 +927,7 @@ div.autocomplete {
   border:1px solid #888;
   margin:0px;
   padding:0px;
+  z-index: 30;
 }
 
 div.autocomplete ul {
